--- a/afs/templates/views/components/iiif-viewer.htm
+++ b/afs/templates/views/components/iiif-viewer.htm
@@ -2,14 +2,43 @@
 {% load i18n %}
 
 {% block tabs %}
+<div class="workbench-card-sidebar-tab" data-bind="click: function() {
+    toggleTab('imageTools');
+}, css: {
+    'active': activeTab() === 'imageTools'
+}">
+    <i class="fa fa-image"></i>
+    <span class="map-sidebar-text">{% trans "Image" %}</span>
+</div>
 {% endblock tabs %}
 
 {% block sidepanel %}
+<!--ko if: activeTab() === 'imageTools' -->
+<div class="workbench-card-sidepanel-header-container">
+    <h4 class="workbench-card-sidepanel-header" data-bind="click: hideSidePanel">{% trans "Image Tools" %}</h4>
+</div>
+<div>
+    IMAGE TOOLS HERE...
+</div>
+<!--/ko -->
 {% endblock sidepanel %}
 
 {% block content_management %}
-<div class="workbench-card-container">
-    hello iiif
+<div class="workbench-card-container" data-bind="
+    css: {'gallery-visible': showGallery}
+">
+    VIEWER HERE...
+</div>
+<div class="show-gallery-control" data-bind="
+    click: toggleGallery,
+    css: {'gallery-visible': showGallery},
+    text: showGallery() ? '{% trans "Hide Gallery" %}' : '{% trans "Show Gallery" %}'
+"></div>
+<div class="iiif-viewer-gallery">
+    <!--ko if: showGallery() -->
+    <div class="iiif-gallery-content">
+        GALLERY CONTENT HERE...
+    </div>
+    <!--/ko -->
 </div>
 {% endblock content_management %}
-
