further scaffolds iiif component re: #4

--- a/afs/media/css/package.css
+++ b/afs/media/css/package.css
@@ -12,10 +12,10 @@
     padding: 6px 12px;
     border: solid 1px rgb(221, 221, 221);
     border-bottom: transparent;
+    z-index: 10000;
 }
 .gallery-visible.show-gallery-control {
     bottom: 129px;
-    z-index: 100;
 }
 .iiif-viewer-gallery {
     width: 100%;
@@ -23,6 +23,9 @@
 }
 .workbench-card-container-sidepanel-active .iiif-viewer-gallery {
     padding-right: 475px;
+}
+.workbench-card-container-sidepanel-active .workbench-card-container {
+    margin-right: 475px;
 }
 .iiif-gallery-content {
     border-top: solid 1px rgb(221, 221, 221);
@@ -36,3 +39,19 @@
 .workbench-card-container.gallery-visible {
     padding-bottom: 130px;
 }
+.iiif-leaflet {
+    height: 100%;
+}
+.iiif-gallery-canvas, .iiif-gallery-sequence, .iiif-gallery-sequence-canvases {
+    padding-left: 10px;
+    float: left;
+}
+.iiif-gallery-canvas-thumbnail {
+    height: 75px;
+}
+/* 
+iiif-gallery-sequence
+iiif-gallery-sequence-label
+iiif-gallery-sequence-canvases
+iiif-gallery-canvas-label
+*/
