--- a/afs/templates/views/components/iiif-viewer.htm
+++ b/afs/templates/views/components/iiif-viewer.htm
@@ -24,10 +24,8 @@
 {% endblock sidepanel %}
 
 {% block content_management %}
-<div class="workbench-card-container" data-bind="
-    css: {'gallery-visible': showGallery}
-">
-    VIEWER HERE...
+<div class="workbench-card-container" data-bind="css: {'gallery-visible': showGallery}">
+    <div class="iiif-leaflet" data-bind="leaflet: leafletConfig"></div>
 </div>
 <div class="show-gallery-control" data-bind="
     click: toggleGallery,
@@ -35,9 +33,17 @@
     text: showGallery() ? '{% trans "Hide Gallery" %}' : '{% trans "Show Gallery" %}'
 "></div>
 <div class="iiif-viewer-gallery">
-    <!--ko if: showGallery() -->
-    <div class="iiif-gallery-content">
-        GALLERY CONTENT HERE...
+    <!--ko if: showGallery() && manifestData() -->
+    <div class="iiif-gallery-content" data-bind="foreach: sequences">
+        <div class="iiif-gallery-sequence">
+            <div class="iiif-gallery-sequence-label" data-bind="text: label"></div>
+            <div class="iiif-gallery-sequence-canvases" data-bind="foreach: canvases">
+                <div class="iiif-gallery-canvas">
+                    <div class="iiif-gallery-canvas-thumbnail" data-bind="style: { backgroundImage: 'url(\'' + thumbnail + '\')' }"></div>
+                    <div class="iiif-gallery-canvas-label" data-bind="text: label"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <!--/ko -->
 </div>
