improves styles for image tools, re: #11

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -76,3 +76,22 @@
     font-size: 0.9em;
     text-align: center;
 }
+
+
+.iiif-image-tools {
+    padding: 10px;
+    color: rgb(30, 63, 94);
+    font-size: 1.3em;
+}
+.iiif-image-tool-slider {
+    padding-bottom: 20px;
+}
+.iiif-image-tool-label {
+    
+}
+.iiif-image-tool-slider-wrap {
+    margin: 0 20px;
+}
+.iiif-image-tool-value {
+    padding: 0 20px;
+}
