--- a/afs/templates/views/components/iiif-viewer.htm
+++ b/afs/templates/views/components/iiif-viewer.htm
@@ -24,7 +24,9 @@
             <i class="fa fa-lightbulb-o"></i>
             {% trans "Brightness" %}
         </div>
-        <input type="range" min="0" max="200" step="1" data-bind="value: brightness, valueUpdate: 'input'">
+        <div class="iiif-image-tool-slider-wrap">
+            <input type="range" min="0" max="200" step="1" data-bind="value: brightness, valueUpdate: 'input'">
+        </div>
         <div class="iiif-image-tool-value">
             <span data-bind="text: brightness"></span>%
         </div>
@@ -34,7 +36,9 @@
             <i class="fa fa-adjust"></i>
             {% trans "Contrast" %}
         </div>
-        <input type="range" min="0" max="200" step="1" data-bind="value: contrast, valueUpdate: 'input'">
+        <div class="iiif-image-tool-slider-wrap">
+            <input type="range" min="0" max="200" step="1" data-bind="value: contrast, valueUpdate: 'input'">
+        </div>
         <div class="iiif-image-tool-value">
             <span data-bind="text: contrast"></span>%
         </div>
@@ -44,7 +48,9 @@
             <i class="fa fa-eyedropper"></i>
             {% trans "Saturation" %}
         </div>
-        <input type="range" min="0" max="200" step="1" data-bind="value: saturation, valueUpdate: 'input'">
+        <div class="iiif-image-tool-slider-wrap">
+            <input type="range" min="0" max="200" step="1" data-bind="value: saturation, valueUpdate: 'input'">
+        </div>
         <div class="iiif-image-tool-value">
             <span data-bind="text: saturation"></span>%
         </div>
