--- a/afs/templates/views/components/iiif-viewer.htm
+++ b/afs/templates/views/components/iiif-viewer.htm
@@ -55,6 +55,22 @@
             <span data-bind="text: saturation"></span>%
         </div>
     </div>
+    <div class="iiif-image-tool-slider">
+        <div class="iiif-image-tool-label">
+            <i class="fa fa-image"></i>
+            {% trans "Greyscale" %}
+        </div>
+        <div class="toggle-container">
+            <span class="switch switch-small switch-widget" data-bind="css: {'on': greyscale()}, click: function() { greyscale(!greyscale()); }"><small></small></span>
+            <div style="display:flex; flex-direction:row;">
+                <div class="arches-toggle-sm">Display as greyscale</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="install-buttons">
+        <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-refresh" data-bind="click: resetImageSettings">{% trans 'Reset to defaults' %}</button>
+    </div>
 </div>
 <!--/ko -->
 {% endblock sidepanel %}
