--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -7,6 +7,7 @@
     background-color: rgb(242, 242, 242);
 }
 .show-gallery-control {
+    cursor: pointer;
     font-weight: bold;
     left: 25px;
     padding: 6px 12px;
@@ -98,13 +99,16 @@
     padding: 5px;
 }
 .iiif-image-tool-slider .arches-toggle-sm {
+    cursor: pointer;
     margin-top: -19px;
 }
 .manifest-editor {
     padding-bottom: 10px;
 }
-.manifest-editor-error {
+.manifest-editor-loading, .manifest-editor-error {    
     display: inline-block;
     padding-left: 10px;
+}
+.manifest-editor-error {
     color: red;
 }
