--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -70,3 +70,9 @@
 .iiif-gallery-canvas-label {
     font-size: 0.9em;
 }
+
+.chart {
+    margin-right: 105px;
+    margin-left: 15px;
+    margin-top: 20px;
+}
