--- a/afs/templates/views/components/iiif-viewer.htm
+++ b/afs/templates/views/components/iiif-viewer.htm
@@ -96,7 +96,7 @@
             <!--/ko -->
             <!--ko if: !manifestLoading() -->
                 <div class="iiif-gallery-sequence-label" data-bind="click: toggleManifestEditor">
-                    <span data-bind="text: manifestName() ? manifestName() : '{% trans "No manifest selected..." %}'"></span>
+                    <span data-bind="text: manifestData() ? manifestName() : '{% trans "No manifest selected..." %}'"></span>
                     <i class="fa fa-pencil"></i>
                 </div>
                 <!--ko foreach: sequences -->
@@ -125,7 +125,10 @@
                 </div>
             </div>
             <div class="install-buttons">
-                <button class="btn btn-shim btn-mint btn-labeled btn-lg fa fa-pencil" data-bind="click: getManifestData, disabled: manifestLoading(), css: { 'disabled': manifestLoading() }">{% trans 'Update manifest' %}</button>
+                <button class="btn btn-shim btn-mint btn-labeled btn-lg fa fa-pencil" data-bind="click: getManifestData,
+                    disabled: manifestLoading(),
+                    css: { 'disabled': manifestLoading() }
+                ">{% trans 'Update manifest' %}</button>
                 <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-refresh" data-bind="click: toggleManifestEditor">{% trans 'Cancel' %}</button>
                 <!--ko if: manifestLoading() -->
                 <span class="manifest-editor-loading">
