--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -8,13 +8,18 @@
     'three': '{{ STATIC_URL }}packages/three/build/three.min',
     'CSS2DRenderer': '{{ STATIC_URL }}packages/three/examples/js/renderers/CSS2DRenderer',
     'TrackballControls': '{{ STATIC_URL }}packages/three/examples/js/controls/TrackballControls',
-    'PDBLoader': '{{ STATIC_URL }}packages/three/examples/js/loaders/PDBLoader'
+    'PDBLoader': '{{ STATIC_URL }}packages/three/examples/js/loaders/PDBLoader',
+    'PCDLoader': '{{ STATIC_URL }}packages/three/examples/js/loaders/PCDLoader',
+    'TWEEN': '{{ STATIC_URL }}packages/@tweenjs/tween.js/src/Tween',
+    'ColladaLoader': '{{ STATIC_URL }}packages/three/examples/js/loaders/ColladaLoader'
 {% endblock paths %}
 
 {% block shim %}
     'CSS2DRenderer': {deps: ['register-three']},
     'TrackballControls': {deps: ['register-three']},
     'PDBLoader': {deps: ['register-three']},
+    'PCDLoader': {deps: ['register-three']},
+    'ColladaLoader': {deps: ['register-three']},
 {% endblock shim %}
 
 {% block project_modules %}
