Adds ko bindings for pcd and pdb readers and adds loading indicator for readers. re #6

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -119,3 +119,56 @@
     margin-left: 15px;
     margin-top: 20px;
 }
+
+.file-viewer {
+    position: relative;
+}
+
+.file-viewer .loading-mask {
+    position: relative;
+    opacity: .5;
+    background-color: gray;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100000000;
+}
+
+.file-viewer .loading-mask::before {
+    position: fixed;
+    opacity: .5;
+    color: #7b7b7b;
+    content: '\f110';
+    -webkit-animation: fa-spin 2s infinite linear;
+    animation: fa-spin 2s infinite linear;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 10vw;
+    margin-top: 42vh;
+    margin-left: 32vw;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transform: translate(0, 0);
+    z-index: 100000001;
+}
+
+.file-viewer .loading-mask:after {
+    position: fixed;
+    opacity: .5;
+    color: #7b7b7b;
+    content: '\f110';
+    -webkit-animation: fa-spin 2s infinite linear;
+    animation: fa-spin 2s infinite linear;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 10vw;
+    margin-top: 42vh;
+    margin-left: 32vw;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transform: translate(0, 0);
+    z-index: 100000001;
+}
