--- a/afs/templates/views/components/cards/file-renderers/textreader.htm
+++ b/afs/templates/views/components/cards/file-renderers/textreader.htm
@@ -3,9 +3,10 @@
 <!--ko if: params.context === 'render' -->
 <div class="">
     <!--ko if: params.selected() -->
-    <div class="preview">
+    <div class="preview file-viewer" style="position: relative">
+        <div class='loading-mask' data-bind="visible: loading()"></div>
         <!--ko if: ko.unwrap(chartData) -->
-        <div class="chart" data-bind='c3: {data: chartData, options: chartOptions}'></div>
+        <div class="chart" data-bind='c3: {data: chartData, options: chartOptions, loading: loading}'></div>
         <!--/ko-->
     </div>
     <!--/ko-->
