Update iiif leaflet background color, image labels

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -44,6 +44,7 @@
 }
 .iiif-leaflet {
     height: 100%;
+    background: #fafafa;
 }
 .iiif-gallery-canvas, .iiif-gallery-sequence, .iiif-gallery-sequence-canvases {
     padding-left: 10px;
@@ -84,7 +85,7 @@
 .iiif-image-tools {
     padding: 10px;
     color: rgb(30, 63, 94);
-    font-size: 1.3em;
+    font-size: 1.1em;
 }
 .iiif-image-tool-slider {
     padding-bottom: 20px;
