--- a/afs/templates/views/components/widgets/iiif.htm
+++ b/afs/templates/views/components/widgets/iiif.htm
@@ -2,6 +2,17 @@
 {% load i18n %}
 
 {% block form %}
+<div class="row widget-wrapper">
+    <div class="form-group">
+        <label class="control-label widget-input-label" for="" data-bind="text:label"></label>
+        <!-- ko if: node -->
+        <i data-bind="css: {'ion-asterisk widget-label-required': node.isrequired}"></i>
+        <!-- /ko -->
+        <div class="col-xs-12">
+            {% include 'views/components/iiif-viewer.htm' %}
+        </div>
+    </div>
+</div>
 {% endblock form %}
 
 {% block config_form %}
