--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -69,9 +69,19 @@
         </div>
     <!--/ko-->
     <!--ko if: fileViewer.activeTab() === 'other-tab' -->
+    <h4>Add/remove data from other files...</h4>
+
+    <div style='position: relative;'>
+        <input type="text" class="form-control" style="width: 100%; height:initial" placeholder="{% trans 'Filter file list...' %}" data-bind="textInput: filter"></input>
+        <span class="clear-node-search" data-bind="visible: filter().length > 0, click: function() { filter(''); }"><i class="fa fa-times-circle"></i></span>
+    </div>
+
     <div class="file-workbench-files">
     <!--ko foreach: fileViewer.card.tiles -->
-        <!--ko if: $parent.fileViewer.getUrl($data).renderer && $parent.fileViewer.getUrl($data).renderer.id === $parent.fileViewer.displayContent().renderer.id && $parent.fileViewer.selected().tileid !== $data.tileid -->
+        <!--ko if: $parent.fileViewer.getUrl($data).renderer 
+            && $parent.fileViewer.getUrl($data).renderer.id === $parent.fileViewer.displayContent().renderer.id 
+            && $parent.fileViewer.selected().tileid !== $data.tileid
+            && ($parent.filter().length === 0 || $parent.isFiltered($data))-->
                 <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 0; -->
                 <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;">
                 <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-plus" data-bind="click: function(){$parent.addData($data)}"></i>
@@ -79,7 +89,7 @@
                 <!--/ko-->
                 <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 1; -->
                 <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;">
-                <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-trash" data-bind="click: function(){$parent.removeData(tileid)}"></i>
+                <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-times-circle" data-bind="click: function(){$parent.removeData(tileid)}"></i>
                 </div>
                 <!--/ko-->
                 <!--/ko-->
