initial work to add draw controls to annotation components

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -46,6 +46,9 @@
     height: 100%;
     background: #fafafa;
 }
+.iiif-leaflet .leaflet-draw {
+    display: none;
+}
 .iiif-gallery-canvas, .iiif-gallery-sequence, .iiif-gallery-sequence-canvases {
     padding-left: 10px;
     display: inline-block;
