--- a/afs/templates/views/components/iiif-widget-annotation.htm
+++ b/afs/templates/views/components/iiif-widget-annotation.htm
@@ -26,7 +26,94 @@
                 <div class="row widget-wrapper">
                     <div class="form-group">
                         <div class="col-xs-12">
-                            editor here...
+                            <div class="map-card-feature-list">
+                                <div class="add-new-feature" data-bind="visible: !self.disableDrawing()">
+                                    <select data-placeholder="{% trans "Add a new feature..." %}" data-bind="
+                                        value: self.featureLookup[widget.node_id()].selectedTool,
+                                        valueAllowUnset: true,
+                                        options: [
+                                            {
+                                                value: '',
+                                                text: ''
+                                            },
+                                            {
+                                                value: 'draw_point',
+                                                text: 'Add point'
+                                            },
+                                            {
+                                                value: 'draw_line_string',
+                                                text: 'Add line'
+                                            },
+                                            {
+                                                value: 'draw_polygon',
+                                                text: 'Add polygon'
+                                            }
+                                        ],
+                                        optionsText: 'text',
+                                        optionsValue: 'value',
+                                        chosen: {
+                                            'width': '100%',
+                                            'disable_search_threshold': 10,
+                                            'allow_single_deselect': true
+                                        }
+                                    "></select>
+                                </div>
+                                <div class="add-new-feature" data-bind="visible: self.disableDrawing">
+                                    <select data-placeholder="{% trans "Add a new feature..." %}" data-bind="
+                                        value: self.featureLookup[widget.node_id()].selectedTool,
+                                        valueAllowUnset: true,
+                                        options: [
+                                            {
+                                                value: '',
+                                                text: ''
+                                            },
+                                            {
+                                                value: 'draw_point',
+                                                text: 'Add point'
+                                            },
+                                            {
+                                                value: 'draw_line_string',
+                                                text: 'Add line'
+                                            },
+                                            {
+                                                value: 'draw_polygon',
+                                                text: 'Add polygon'
+                                            }
+                                        ],
+                                        optionsText: 'text',
+                                        optionsValue: 'value',
+                                        chosen: {
+                                            disabled: true,
+                                            'width': '100%',
+                                            'disable_search_threshold': 10,
+                                            'allow_single_deselect': true
+                                        }
+                                    "></select>
+                                </div>
+                            </div>
+                            <table class="table">
+                                <tbody>
+                                    <!-- ko foreach: {data: self.featureLookup[widget.node_id()].features, as: 'feature'} -->
+                                    <tr class="map-card-feature-item" data-bind="css: {'active': self.selectedFeatureIds().indexOf(feature.id) >= 0}, click: function() { self.showFeature(feature); }">
+                                        <td>
+                                            <span class="map-card-feature-name" data-bind="text: feature.geometry.type"></span>
+                                        </td>
+                                        <td class="map-card-feature-tool">
+                                            <a href="javascript:void(0);" data-bind="click: function() { self.editFeature(feature); }, clickBubble: false">
+                                                <i class="fa fa-pencil map-card-feature-edit"></i>
+                                                {% trans "Edit" %}
+                                            </a>
+                                        </td>
+                                        <td class="map-card-feature-tool">
+                                            <a href="javascript:void(0);" data-bind="click: function() { self.deleteFeature(feature); }, clickBubble: false">
+                                                <i class="fa fa-trash map-card-feature-delete"></i>
+                                                {% trans "Delete" %}
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <!-- /ko -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
