--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -77,24 +77,46 @@
     </div>
 
     <div class="file-workbench-files">
-    <!--ko foreach: fileViewer.card.tiles -->
-        <!--ko if: $parent.fileViewer.getUrl($data).renderer 
-            && $parent.fileViewer.getUrl($data).renderer.id === $parent.fileViewer.displayContent().renderer.id 
-            && $parent.fileViewer.selected().tileid !== $data.tileid
-            && ($parent.filter().length === 0 || $parent.isFiltered($data))-->
-                <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 0; -->
-                <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;">
-                <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-plus" data-bind="click: function(){$parent.addData($data)}"></i>
-                </div>
-                <!--/ko-->
-                <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 1; -->
-                <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;">
-                <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-times-circle" data-bind="click: function(){$parent.removeData(tileid)}"></i>
-                </div>
-                <!--/ko-->
-                <!--/ko-->
-                <!--/ko-->
-            </div>
+        <!--ko foreach: fileViewer.card.tiles -->
+            <!--ko if: $parent.fileViewer.getUrl($data).renderer 
+                && $parent.fileViewer.getUrl($data).renderer.id === $parent.fileViewer.displayContent().renderer.id 
+                && $parent.fileViewer.selected().tileid !== $data.tileid
+                && ($parent.filter().length === 0 || $parent.isFiltered($data))-->
+                    <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 0; -->
+                    <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;" data-bind="click: function(){$parent.selectedSeriesTile($data)}">
+                        <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-plus" data-bind="click: function(){$parent.addData($data)}"></i>
+                    </div>
+                    <!--/ko-->
+                    <!--ko if: $parent.seriesData().filter(function(t){return t.tileid === $data.tileid}).length === 1; -->
+                    <div class="file-workbench-file" style="display: inline-flex; width: 100%; justify-content: space-between;" data-bind="click: function(){$parent.selectedSeriesTile($data)}">
+                        <div data-bind="text: $parent.fileViewer.getUrl($data).name"></div><i class="fa fa-times-circle" data-bind="click: function(){$parent.removeData(tileid)}"></i>
+                    </div>
+                    <!--/ko-->
+            <!--/ko-->
+        <!--/ko-->
+    </div>
     <!--/ko-->
+    <div>
+        <!-- ko if: seriesData().length >= 1 && selectedSeriesTile -->
+        <div>
+            <h2>Style</h2>
+            <div class="row widget-container">
+                <div class="form-group">
+
+                    <div class="relative">
+                        <label class="col-xs-12 control-label widget-input-label"> {% trans "Color" %} </label>
+                    </div>
+
+                    <div class="colorpicker-component input-group" id="cp1">
+                        <input placeholder="{% trans  'Data Series Line Color'  %}" class="form-control input-md widget-input" data-bind="colorPicker: {color: seriesStyles()[selectedSeriesTile().tileid].color, format:'hex', container: '#cp1'}">
+                        <span class="input-group-addon"><i class="ion-stop resource-color-swatch" data-bind="style: {color: seriesStyles()[selectedSeriesTile().tileid].color}"></i></span>
+                        <!-- <button data-bind="click: ">{% trans 'Save Changes' %}</button> -->
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- /ko -->
+    </div>
 <!--/ko-->
 
