adds annotation style tools, re: #51

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -123,3 +123,8 @@
     margin-left: 15px;
     margin-top: 20px;
 }
+.style-tools-collapser {
+    cursor: pointer;
+    padding: 5px;
+    font-size: 0.9em;
+}
