--- a/afs/templates/views/components/iiif-widget-annotation.htm
+++ b/afs/templates/views/components/iiif-widget-annotation.htm
@@ -26,6 +26,61 @@
                 <div class="row widget-wrapper">
                     <div class="form-group">
                         <div class="col-xs-12">
+                            <div class="style-tools-collapser" data-bind=" click: function() {
+                                self.showStylingTools(!self.showStylingTools());
+                            }">
+                                <span data-bind="text: self.showStylingTools() ? '{% trans "Hide Style Tools" %}' : '{% trans "Show Style Tools" %}'"></span>
+                                <i class="fa" data-bind="{
+                                    css: {
+                                        'fa-caret-down' : !self.showStylingTools(),
+                                        'fa-caret-up' : self.showStylingTools(),
+                                    }
+                                }"></i>
+                            </div>
+                            <div class="form-horizontal" data-bind="if: self.showStylingTools">
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Line Color" %}</label>
+                                    <div class="col-sm-8">
+                                        <div class="colorpicker-component input-group">
+                                            <input placeholder="{% trans "Line Color " %}" class="form-control input-lg widget-input" data-bind="colorPicker: {color: self.lineColor, format:'hex'}">
+                                            <span class="input-group-addon"><i class="ion-stop resource-color-swatch" data-bind="style: {color: self.lineColor}"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Fill color" %}</label>
+                                    <div class="col-sm-8">
+                                        <div class="colorpicker-component input-group">
+                                            <input placeholder="{% trans "Fill Color " %}" class="form-control input-lg widget-input" data-bind="colorPicker: {color: self.fillColor, format:'hex'}">
+                                            <span class="input-group-addon"><i class="ion-stop resource-color-swatch" data-bind="style: {color: self.fillColor}"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Line Width" %}</label>
+                                    <div class="col-sm-8">
+                                        <input type="number" placeholder="" class="form-control" data-bind="valueUpdate: 'keyup', value: self.lineWidth">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Line Opacity" %}</label>
+                                    <div class="col-sm-8">
+                                        <input type="number" placeholder="" class="form-control" data-bind="valueUpdate: 'keyup', value: self.lineOpacity">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Point Radius" %}</label>
+                                    <div class="col-sm-8">
+                                        <input type="number" placeholder="" class="form-control" data-bind="valueUpdate: 'keyup', value: self.pointRadius">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-4 control-label">{% trans "Fill Opacity" %}</label>
+                                    <div class="col-sm-8">
+                                        <input type="number" placeholder="" class="form-control" data-bind="valueUpdate: 'keyup', value: self.fillOpacity">
+                                    </div>
+                                </div>
+                            </div>
                             <div class="map-card-feature-list">
                                 <div class="add-new-feature" data-bind="visible: !self.disableDrawing()">
                                     <select data-placeholder="{% trans "Add a new feature..." %}" data-bind="
