--- a/afs/templates/views/components/widgets/iiif.htm
+++ b/afs/templates/views/components/widgets/iiif.htm
@@ -16,6 +16,12 @@
 {% endblock form %}
 
 {% block config_form %}
+<div class="control-label">
+    {% trans "Default Manifest URL" %}
+</div>
+<div class="col-xs-12 crud-widget-container">
+    <input type="" placeholder="{% trans "Enter manifest URL" %}" id="" class="form-control input-md widget-input" data-bind="textInput: defaultManifest">
+</div>
 {% endblock config_form %}
 
 {% block report %}
